Bug Squashing

--- a/UI/black-dashboard-pro-v1.1.0-2/black-dashboard-pro-v1.1.0/assets/css/black-dashboard.css
+++ b/UI/black-dashboard-pro-v1.1.0-2/black-dashboard-pro-v1.1.0/assets/css/black-dashboard.css
@@ -14,6 +14,13 @@
  * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
  */
+
+/* GAY SCROLL BAR SHIT */
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 /*     brand Colors              */
 /* navbar color */
 :root {
